2009-06-18  Maynard Johnson  <maynardj@us.ibm.com>

	* libpp/format_output.h:
	* libpp/format_output.cpp: Make sure that all callgraph symbols are
	  reported, even if 0 samples

2009-06-05  William Cohen  <wcohen@redhat.com>

	* libutil++/bfd_support.cpp: Avoid calling bfd_find_nearest_line
	  with NULL syms argument

2009-06-05  Andi Kleen  <ak@linux.intel.com>

	* libop/op_events.h: (find_event_by_name):
	* libop/op_events.c: (find_event_by_name): Match unit mask.
	* libop/op_parse_event.c: (parse_events): Set unit_mask_valid
	* libop/op_parse_event.h: (parsed_eventd): Add unit_mask_valid
	* libop/tests/alloc_counter_tests.c: (do_test):
	* libop/tests/parse_event_tests.c:
	* daemon/opd_ibs: (ibs_parse_and_set_events):
	* gui/oprof_start.cpp (alloc_selected_events):
	* utils/ophelp.c: (resolve_events, show_unit_mask):
	  Update find_event_by_name call.

2009-06-05 Andi Kleen <ak@linux.intel.com>

	* libop/tests/alloc_counter_tests.c:
	Don't use non existent unit masks in P4 counter tests.

2009-06-03 Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* events/x86-64/family10/events:
	* events/x86-64/family10/unit_masks: Update events and unitmasks
	  for the AMD Six-core Opteron processor support from
	  publication 31116 revision 3.28

2009-05-27 Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* utils/opcontrol: Fix IBS initialization

2009-05-27 Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

 	* daemon/oprofiled.c:
	* daemon/opd_ext.c: Fix extended feature initialization

2009-05-27 Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* doc/oprofile.xml:
	* doc/internals.xml: Add Extended-Interface and IBS documentation,
	
2009-05-19 Andi Kleen  <ak@linux.intel.com>

 	* utils/ophelp.c: (cleanup) Fix cleanup crash.
 
2009-05-19  Andi Kleen  <ak@linux.intel.com>

 	* events/i386/atom/events: Use hardcoded counters. Readd
 	UNHALTED_REFERENCE_CLOCK.
 	* events/i386/nehalem/events:
 	* events/i386/nehalem/unit_masks: Use hardcoded counters.